--- a/main.html
+++ b/main.html
@@ -9,8 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
-
+	</script>
+	<h>Why I want to become a developer?</h>
+	<p>Software Developer is one of the best Job in IT industry.
+	   Everyday I can learn new things and face new challenges. I love
+	   to face new challenges and as an Engineer I should learn everyday 
+	   and solve complex problems. I can wok remotely which is very 
+	   convenience for any employee. This profession is really high 
+	   in demand and it also pay you good.</p>
 </body>
 
 </html>
