--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 	</script>
-	<h>Why I want to become a developer?</h>
+	<h1>Why I want to become a developer?</h1>
 	<p>Software Developer is one of the best Job in IT industry.
 	   Everyday I can learn new things and face new challenges. I love
 	   to face new challenges and as an Engineer I should learn everyday 
